# kappybara

./: .buildinfo  .gitignore  CNAME  README.md  apply-update-refactor_branch_summary.html  ci-perf-data_branch_summary.html  ci-test-summary_branch_summary.html  combine-systems_branch_summary.html  flake.nix  genindex.html  incremental-embedding-update_branch_summary.html  index.html  indexed-set_branch_summary.html  kappa-strs_branch_summary.html  main_branch_summary.html  mixture-refactor-rebase_branch_summary.html  mixture-refactor_branch_summary.html  objects.inv  op-order_branch_summary.html  profiler-exit_branch_summary.html  py-modindex.html  pyproject.toml  requirements.txt  rule-symmetries-fix_branch_summary.html  rule-symmetries_branch_summary.html  rule_symmetries_branch_summary.html  search.html  searchindex.js  setup.py  snapshots_branch_summary.html  tutorial.html  tutorial.ipynb
.doctrees/: environment.pickle  index.doctree  tutorial.doctree
2025_07_03_commit_05f58ef/: summary.json
2025_07_03_commit_082fe0d/: summary.json
2025_07_03_commit_10c4eeb/: summary.json
2025_07_03_commit_10eb19f/: summary.json
2025_07_03_commit_122a398/: summary.json
2025_07_03_commit_1ade318/: summary.json
2025_07_03_commit_1cdfdc1/: summary.json
2025_07_03_commit_220542b/: summary.json
2025_07_03_commit_2969ac1/: summary.json
2025_07_03_commit_2b123c3/: summary.json
2025_07_03_commit_2cf3c4b/: summary.json
2025_07_03_commit_2da7a50/: summary.json
2025_07_03_commit_3323c44/: summary.json
2025_07_03_commit_447e3d0/: summary.json
_modules/: index.html
(+339 files in other folders)
